--- a/src/proxy.conf
+++ b/src/proxy.conf
@@ -6,11 +6,17 @@
   ProxyRequests Off
   ProxyPreserveHost On
 
-  <LocationMatch /EC2_INSTANCE_ID/>
+  RewriteEngine on
+  RewriteCond %{HTTP:Upgrade} =websocket
+  RewriteRule /EC2_INSTANCE_ID/(.*)     ws://localhost:8787/$1  [P,L]
+  RewriteCond %{HTTP:Upgrade} !=websocket
+  RewriteRule /EC2_INSTANCE_ID/(.*)     http://localhost:8787/$1 [P,L]
+
+  <Location /EC2_INSTANCE_ID/>
     AddHandler mod_python .py
     PythonPath "sys.path+['/usr/lib/cgi-bin']"
     PythonHeaderParserHandler access
     ProxyPass http://localhost:8787/
     ProxyPassReverse http://localhost:8787/$0
-  </LocationMatch>
+  </Location>
 </VirtualHost>
